# Projects

AC to constant DC (PCB circuit)/: Ultiboard Design.ewprj
AC to constant DC (PCB circuit)/Images/: Note.txt
Contactless thermometer using Infrared sensor and Arduino Nano/Laser_Temp_Gun/: Note.txt
Garage Management System/: PROJECT PRESENTATION.pptx
Garage Management System/CODE/: .gitignore  Address.cpp  Address.h  Bus Record.txt  Bus.cpp  Bus.h  CMakeLists.txt  Customer Record.txt  Customer.cpp  Customer.h  CustomerLinkVehicle.cpp  CustomerLinkVehicle.h  Employee Record.txt  Employee.cpp  Employee.h  Functions.cpp  Functions.h  Hatch Back Record.txt  Hatchback.cpp  Hatchback.h  LogIn.cpp  LogIn.h  Makefile  Person.cpp  Person.h  README.md  Sales Record.txt  Sedan Record.txt  Sedan.cpp  Sedan.h  Sports Car Record.txt  SportsCar.cpp  SportsCar.h  Vehicle.cpp  Vehicle.h  main.cpp
Garage Management System/UML Diagrams/: LogIn.drawio  Person.drawio  Vehicle UML.drawio
Image compression and processing/: Group 8 Presentaion.pptx
Image compression and processing/Code/: LAcode.m
Line following and obstacle avoiding robot car using Arduino uno/Code/: Code.ino
Prison management system using concepts of OOP, data structures and algorithms in C++/: Module 3.pptx  Prison Management System.pptx
Prison management system using concepts of OOP, data structures and algorithms in C++/Code/: Abstract.h  Addons.h  CMakeLists.txt  Convicted.cpp  Functions.cpp  Just data.txt  Makefile  Person.cpp  Prisoners.cpp  Prisoners.h  PrisonersUi.cpp  PrisonersUi.h  Visitor.cpp  r.out  (+8 more)
(+24 files in other folders)
